# yt-dlp-easy-interface

./: Cargo.toml  Justfile  LICENSE  README.md  build.rs  icon.rc
resources/: download_executables.sh
src/: main.rs
ui/: main.slint
