[package]
name = "ytdlrs"
version = "0.1.0"
edition = "2021"

[dependencies]
flexi_logger = "0.29.6"
log = "0.4.22"
rfd = "0.15.0"
slint = "1.8.0"
tokio = { version = "1.41.1", features = ["full"] }

[build-dependencies]
slint-build = "1.7.2"
embed-resource = "3.0"

[profile.release]
lto = "thin"
codegen-units = 1
debug = 0
opt-level = "z"
